# spacebattle

./: .gitmodules  Protocol.md  protocol.md  readme.md  server.cpp
client/: .gitignore  .sconsign.dblite  CMakeLists.txt  SConstruct  conanfile.txt
client/project/: Main.tscn  project.godot  root.gd  root.tscn
client/project/images/: menu_background.tres
client/project/images/game_background/: 0.png.import  1.png.import  2.png.import  3.png.import  4.png.import  5.png.import  6.png.import  7.png.import
client/project/images/loader/: 00.png.import  01.png.import  02.png.import  03.png.import  04.png.import  05.png.import  06.png.import  07.png.import  08.png.import  09.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import
client/project/images/menu_background/: 00.png.import  01.png.import  02.png.import  03.png.import  04.png.import  05.png.import  06.png.import  07.png.import  08.png.import  09.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import  16.png.import  17.png.import  18.png.import  19.png.import  20.png.import  21.png.import  22.png.import  23.png.import  24.png.import  25.png.import  26.png.import  27.png.import  28.png.import  29.png.import  30.png.import  31.png.import  32.png.import
client/project/scenes/: Main.tscn  lobby.tscn  lobby_list.tscn  lobby_menu.tscn  main_menu.tscn
client/project/scripts/: Main.gd  global.gd  lobby.gd  lobby_list.gd  lobby_menu.gd  main_menu.gd
client/src/: client.cpp  client.hpp  client_send_methods.cpp  context.cpp  context.hpp  dispatcher.cpp  dispatcher.hpp  event.hpp  gdclass.cpp  gdclass.hpp  gdexample.cpp  gdexample.hpp  gdexample.os  gdlibrary.cpp  gdlibrary.os  library.c  main.cpp  message.hpp  room.cpp  room.hpp  state.hpp
client/src/dispatchers/: authentication__ask_username.cpp  authentication__ask_username.hpp  authentication__set_username.cpp  authentication__set_username.hpp  connection__set_client_id.cpp  connection__set_client_id.hpp  in_menu__create_room.cpp  in_menu__create_room.hpp  in_menu__fetch_rooms.cpp  in_menu__fetch_rooms.hpp  in_menu__join_room.cpp  in_menu__join_room.hpp
client/src/helpers/: serialization.hpp
client/src/network/: client.cpp  client.hpp  message.hpp  packet.cpp  packet.hpp
client/src/serialize/: string.hpp
old_client/: README.md
old_client/src/: event.hpp  main.cpp
server/: CMakeLists.txt  README.md  conanfile.txt
server/src/: dispatch_context.hpp  dispatcher.cpp  dispatcher.hpp  event.hpp  main.cpp  room.cpp  room.hpp  server_context.cpp  server_context.hpp  session_context.cpp  session_context.hpp  state.hpp
server/src/dispatchers/: authentication__ask_username.cpp  authentication__ask_username.hpp  authentication__set_username.cpp  authentication__set_username.hpp  connection__set_client_id.cpp  connection__set_client_id.hpp  in_lobby__leave_room.cpp  in_lobby__leave_room.hpp  in_lobby__player_joined.cpp  in_lobby__player_joined.hpp  in_lobby__player_leaved.cpp  in_lobby__player_leaved.hpp  in_menu__create_room.cpp  in_menu__create_room.hpp  in_menu__fetch_room_info.cpp  in_menu__fetch_room_info.hpp  in_menu__fetch_rooms.cpp  in_menu__fetch_rooms.hpp  in_menu__join_room.cpp  in_menu__join_room.hpp
server/src/events/: ask_username.hpp  set_username.hpp
server/src/helpers/: serialization.cpp  serialization.hpp
server/src/network/: message.hpp  packet.cpp  packet.hpp  packet_handler.cpp  packet_handler.hpp  server.cpp  server.hpp  server_context.cpp  server_context.hpp  session.cpp  session.hpp  session_context.cpp  session_context.hpp
server/src/network/operation/: username.cpp  username.hpp
server/src/network/serialize/: string.hpp
server/src/operation/: username.cpp  username.hpp
server/src/serialize/: string.hpp  uint32_t.hpp
